--- a/.github/workfows/ci.yml
+++ b/.github/workfows/ci.yml
@@ -1,40 +1,29 @@
 name: CI
-
 on:
   push:
     branches:
       - main
-
 jobs:
-
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Enable Debug Output
-      run: echo "::debug::Debug is enabled"
-      env:
-        ACTIONS_STEP_DEBUG: true
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.11
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Print Python Path
-      run: echo $PYTHONPATH
-           echo $pwd
-    
-    - name: Set PYTHONPATH
-      run: export PYTHONPATH=$PYTHONPATH:$(pwd)
-
-    - name: Run tests
-      run: pytest  # Adjust the command to run your tests
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Enable Debug Output
+        run: echo "::debug::Debug is enabled"
+        env:
+          ACTIONS_STEP_DEBUG: true
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Print Python Path
+        run: echo $PYTHONPATH echo $pwd
+      - name: Set PYTHONPATH
+        run: export PYTHONPATH=$PYTHONPATH:$(pwd)
+      - name: Run tests
+        run: pytest
