--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,24 @@
-name: CI
-on:
-  push:
-    branches:
-      - main
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Enable Debug Output
-        run: echo "::debug::Debug is enabled"
-        env:
-          ACTIONS_STEP_DEBUG: true
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Print Python Path
-        run: echo $PYTHONPATH echo $pwd
-      - name: Set PYTHONPATH
-        run: export PYTHONPATH=$PYTHONPATH:$(pwd)
-      - name: Run tests
-        run: pytest
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11.7
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip list  # Add this line to print installed packages for debugging
+
+    - name: Debug information
+      run: |
+        ls -R  # Add this line to print directory structure for debugging
+        env  # Add this line to print environment variables for debugging
+
+    - name: Run tests
+      run: pytest
